# spartan

./: .dockerignore  .gitignore  .gitmodules  CMakeLists.txt  LICENSE.txt  README.rst  setup_environment.sh
apps/: .json
models/dishes/plate_8p5in_decomp/: model.config  package.xml  plate_8p5in_decomp.urdf
models/rlg_misc_models/: apriltag_cube.urdf  cabinet_with_desktop.urdf  package.xml  white_bin.urdf
models/rlg_misc_models/meshes/visual/: cabinet_with_desktop.STL  white_bin.STL
spartan_lcmtypes/: CMakeLists.txt  README.md  spartan-lcmConfig.cmake.in
spartan_lcmtypes/lcmtypes/: CMakeLists.txt
spartan_lcmtypes/pkgconfig/: CMakeLists.txt  lcmtypes_spartan-lcm.pc.in
src/ContactParticleFilter/cpf_lcmtypes/lcmtypes/: CMakeLists.txt  CPF_data_t.lcm  CPF_particle_set_t.lcm  CPF_particle_t.lcm  actual_and_estimated_contact_locations_t.lcm  contact_filter_body_wrench_estimate_t.lcm  contact_filter_estimate_t.lcm  external_force_torque_t.lcm  multiple_contact_location_t.lcm  residual_observer_state_t.lcm  single_contact_filter_estimate_t.lcm
src/ContactParticleFilter/cpf_lcmtypes/pkgconfig/: CMakeLists.txt  lcmtypes_cpf-lcm-java.pc.in  lcmtypes_cpf-lcm.pc.in
src/ContactParticleFilter/src/: CMakeLists.txt  LCMHandler.h  kuka_iiwa_status_to_residual.cc  kuka_iiwa_status_to_residual.h  run_iiwa_status_to_residual.cc
src/DepthSim/src/: CMakeLists.txt  TestUserShader.cxx  ZBuffer.cpp  cloud_to_mesh.cpp  cloud_to_mesh_poisson.cpp  renderWorld.cxx  vtp_to_pcd.cpp
src/GlobalPoseEstimation/src/: CMakeLists.txt  collect_point_pair_feature_histograms.cpp  compute_point_pair_feature_histogram.cpp  compute_point_pair_features.cpp  crop_pointcloud_close_to_model.cpp  eigen_histogram.cpp  eigen_histogram.hpp  iterative_closest_point.cpp  iterative_closest_point.hpp  mip_pose_estimator.cpp  mip_pose_estimator.hpp  optimization_helpers.h  point_cloud_generator.cpp  point_cloud_generator.hpp  point_pair_features.cpp  point_pair_features.hpp  rotation_helpers.h  run_bogo_pose_estimator.cpp  run_fgr_pose_estimator.cpp  run_goicp_detector.cpp  run_goicp_pose_estimator.cpp  run_iterative_closest_point_estimator.cpp  run_mip_pose_estimator.cpp  run_miqp_mesh_model_detector.cpp  run_point_cloud_generator.cpp  run_ppf_histogram_matcher.cpp  run_super4pcs_pose_estimator.cpp  test_eigen_histogram.cpp
src/GlobalPoseEstimation/src/FastGlobalRegistration/: CMakeLists.txt  README.md  app.cpp
src/GlobalPoseEstimation/src/GoICP_V1.3/: matrix.cpp
src/GlobalPoseEstimation/src/common/: common.hpp  common_pcl_vtk.hpp  common_rtv.hpp  common_vtk.hpp
src/ObjectDetection/src/: .point_cloud_generator.cpp.swp  .point_cloud_generator.hpp.swp  CMakeLists.txt  crop_pointcloud_close_to_model.cpp  miqp_mesh_model_detector.cpp  miqp_mesh_model_detector.hpp  point_cloud_generator.cpp  point_cloud_generator.hpp  rotation_helpers.h  run_bogo_object_detector.cpp  run_fgr_detector.cpp  run_goicp_detector.cpp  run_miqp_mesh_model_detector.cpp  run_miqp_mesh_model_detector_standalone.cpp  run_point_cloud_generator.cpp  run_super4pcs_detector.cpp
src/ObjectDetection/src/FastGlobalRegistration/: app.h
src/ObjectDetection/src/common/: common.hpp  common_pcl.hpp  common_rtv.hpp  common_vtk.hpp
src/PointCloudInference/src/: CMakeLists.txt  convert_pointcloud_to_occupancy_and_sdf.cc  eigen_nd_array.cc  eigen_nd_array.h  test_voxel_distance_field.cc  voxel_distance_field.cc  voxel_distance_field.h
src/PointCloudInference/src/common/: common.hpp  common_pcl.hpp  common_pcl_vtk.hpp  common_vtk.hpp
src/PointCloudInference/src/cuda_volume_renderer/: helper_functions.h  helper_image.h  volumeRender.cpp  volumeRenderer_kernel.cu
src/ReachabilityAnalyzer/: CMakeLists.txt  README.md  reachability_analyzer.cpp  reachability_analyzer.hpp
src/ReachabilityAnalyzer/config/: reachability_config_planar.yaml
src/RemoteTreeViewer/: CMakeLists.txt  RemoteTreeViewerWrapper.cpp  RemoteTreeViewerWrapper.hpp  RemoteTreeViewerWrapper_pybind.cpp  testRemoteTreeViewerWrapper.cpp  testRemoteTreeViewerWrapper_pybind.py
src/SceneScanner/: CMakeLists.txt  phong_fragment_shader.cpp  phong_fragment_shader.h  phong_vertex_shader.cpp  phong_vertex_shader.h  run_scene_scanner.cpp
src/ShadowHand/src/: CMakeLists.txt  director_config.json  run_shadow_hand_sim.cpp  shadowHandGoalController.py
src/SuperpixelSegmentation/: CMakeLists.txt  rgbd_camera_driver.h  superpixel_segmentation.cc
src/SuperpixelSegmentation/gSLICr_Lib/: gSLICr_defines.h
src/SuperpixelSegmentation/gSLICr_Lib/engines/: gSLICr_core_engine.cpp  gSLICr_core_engine.h  gSLICr_seg_engine.cpp  gSLICr_seg_engine.h  gSLICr_seg_engine_GPU.cu  gSLICr_seg_engine_GPU.h  gSLICr_seg_engine_shared.h
src/UR10/bindings/: CMakeLists.txt
src/UR10/src/: CMakeLists.txt  py_rescale.cc  pybind11  rescale_trajectory.cpp  rescale_trajectory.hpp  ur10App.py  ur10_ros_interface.py
src/UR10/ur_lcm_driver/: .CMakeLists.txt.swp  CMakeLists.txt  test_move.py
src/catkin_projects/drake_simulation/: CMakeLists.txt  README.md  package.xml  setup.py
src/catkin_projects/iiwa_driver/: CMakeLists.txt  README.md  fri_udp_connection_file_descriptor.diff  package.xml
src/catkin_projects/perception_sandbox/: CMakeLists.txt  README.md  collect_point_clouds_with_arm.py  fit_points_helper.py  package.xml
src/common_utils/: CMakeLists.txt  cv_utils.h  eigen_histogram.cc  eigen_histogram.h  eigen_nd_array.cc  eigen_nd_array.h  math_utils.h  pcl_utils.h  pcl_vtk_utils.h  rgbd_camera_driver.cc  rgbd_camera_driver.h  system_utils.h  vtk_utils.h
src/common_utils/test/: test_eigen_histogram.cc
src/control/src/: CMakeLists.txt  plan_runner.cc
src/dishrack_simulation/: CMakeLists.txt  dishrack_simulation.cc
src/iiwa_rlg_sim_backend/: CMakeLists.txt  iiwa_common.cc  iiwa_lcm.cc  iiwa_lcm.h  iiwa_rlg_simulation.cc  oracular_state_estimator.cc
src/iiwa_rlg_sim_backend/iiwa_world/: iiwa_wsg_diagram_factory.cc  iiwa_wsg_diagram_factory.h
src/iiwa_rlg_sim_backend/image_driver/: image_to_images_t.cc  image_to_images_t.h  rgbd_to_ros_pointcloud2_driver.cc  rgbd_to_ros_pointcloud2_driver.h
(+846 files in other folders)
