<?xml version="1.0"?>
<package>
  <name>rlg_misc_models</name>
  <version>1.0.0</version>
  <description>
    This package contains models of varying quality
    of things that are floating around the RLG lab space.
  </description>
  <author email="gizatt@mit.edu">Greg Izatt</author>
  <maintainer email="gizatt@mit.edu">Greg Izatt</maintainer>
  <license>MIT</license>
  <buildtool_depend>catkin</buildtool_depend>
</package>
